<resources>
    <string name="app_name">Yesspree</string>
    <string name="facebook_app_id">211463156112817</string>
    <string name="fb_login_protocol_scheme">fb211463156112817</string>
    <string name="pref_mr">Mr.</string>
    <string name="pref_mrs">Mrs.</string>
    <string name="pref_miss">Miss.</string>
    <string name="pref_ms">M/S</string>
    <string name="first_name">First Name</string>
    <string name="email_id">Email ID</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="password">Password</string>
    <string name="conf_password">Confirm Password</string>
    <string name="referal_code_opt">Referral Code (Optional)</string>
    <string name="you_are_already_sign">You already have an account? Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_wait">Please Wait..</string>
    <string name="cancel_order_dialog_title">Cancel Order</string>
    <string name="cancel_order_confirm">Are you sure want to cancel order?</string>
    <string name="access_your_location">Access your Location</string>
    <string name="access_location_msg">Allow us to access your location while you see the application?</string>
    <string name="access_storage_msg">Allow us to access your storage while you see the application?</string>
    <string name="access_sms_msg">Allow us to read SMS to verify OTP.</string>
    <string-array name="nav_list">
        <item>@string/no_address</item>
        <item>@string/my_address</item>
        <item>@string/my_orders</item>
        <item>@string/my_cart</item>
        <item>@string/my_subscription</item>
        <item>@string/language</item>
        <item>@string/shop_by_cat</item>
        <item>@string/offers</item>
        <item>@string/refer_and_save_more</item>
        <item>@string/rate_us</item>
        <item>@string/share</item>
        <item>@string/about_us</item>
        <item>@string/customer_care</item>
        <item>@string/notification</item>
        <item>@string/faq</item>
        <item>@string/logout</item>
        <item>@string/about_release</item>
    </string-array>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string-array name="week_days">
        <item>@string/monday</item>
        <item>@string/tuesday</item>
        <item>@string/wednesday</item>
        <item>@string/Thu</item>
        <item>@string/friday</item>
        <item>@string/saturday</item>
        <item>@string/sunday</item>
    </string-array>
    <string name="error_no_internet">Please check your internet connection!</string>
    <string name="error_empty_result">Whoops! We didn\'t find anything here.</string>
    <string name="error_something_wrong">Whoops! Something went wrong here.</string>
    <string name="err_firstname">First Name should not be empty</string>
    <string name="err_lastname">Last Name should not be empty</string>
    <string name="err_emailId">Email ID should not be empty</string>
    <string name="err_mobile_no">Mobile Number should not be empty</string>
    <string name="err_password">Password should not be empty</string>
    <string name="err_conf_pass">Confirm Password should not be empty</string>
    <string name="err_conf_pass_match">Confirm Password should match with Password</string>
    <string name="error_incorrect_otp">This OTP you entered is incorrect.</string>
    <string name="sign_up_success">Sighup successfully</string>
    <string name="err_emailId_invalid">Invalid Email Id</string>
    <string name="err_sel_per_pref">Please check any prefix</string>
    <string name="existing_user">Existing User.</string>
    <string name="user_is_alreay_existed">This mobile number is already in use</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_sent_msg">We have sent an OTP to your registered Mobile number. Please enter OTP.</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="continue_text">Continue</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="no_data_found">No data found</string>
    <string name="err_otp_empty">OTP shouldnot be empty</string>
    <string name="err_mobile_not_found">Mobile number not found</string>
    <string name="otp_success">OTP Verified Successfully.</string>
    <string name="read_sms">Read SMS Access</string>
    <string name="dont_allow">Don\'t Allow</string>
    <string name="allow">Allow</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_fb">Sign in with Facebook</string>
    <string name="already_have_account">Already have account? Sign In</string>
    <string name="skip">Skip</string>
    <string name="you_dont_have_acc">You don’t have an account? Sign Up</string>
    <string name="email_or_mobile_no">Email ID / Mobile Number</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="err_email_id_mobile">EmailId or mobile number shoudlnot be empty</string>
    <string name="forgot_Password">Forgot Password</string>
    <string name="change_password">Change Password</string>
    <string name="please_enter_new_pass">Please enter New Password and Confirm Password to Reset your Password.</string>
    <string name="done">Done</string>
    <string name="new_pass">New Password</string>
    <string name="err_user_not_found">User Not Found. Please try again</string>
    <string name="name">Name</string>
    <string name="flate_house">Flat/House/Office No</string>
    <string name="street_name">Street Name</string>
    <string name="village_city">Village / City</string>
    <string name="taluka">Taluka</string>
    <string name="district">District</string>
    <string name="state">State</string>
    <string name="pincode">Pincode</string>
    <string name="locality_landmark">Locality / Landmark</string>
    <string name="address_type">Address Type</string>
    <string name="home">Home</string>
    <string name="office">Office</string>
    <string name="login_to_wishlist">Please login to add item to your shopping List.</string>
    <string name="valid_dob">please select valid date of birth</string>
    <string name="error_empty_offerlist">offer list is empty</string>
    <string name="login">Login</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="paresh_kumar">Pareshkumar Patel</string>
    <string name="no_address">Please add address</string>
    <string name="my_address">My Addresses</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="my_subscription">My Subscription</string>
    <string name="shop_by_cat">Shop By Categories</string>
    <string name="offers">Offers</string>
    <string name="refer_and_save_more">Refer and Save more</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
    <string name="customer_care">Customer Care</string>
    <string name="notification">Notifications</string>
    <string name="logout">Logout</string>
    <string name="faq">FAQ</string>
    <string name="about_release">About This Release</string>
    <string name="category">Category</string>
    <string name="wishlist">Wishlist</string>
    <string name="account">Account</string>
    <string name="no_city">City</string>
    <string name="refresh">Refresh</string>
    <string name="no_result_found">No Result Found !!</string>
    <string name="product_item_name">Aashirvaad Whole Wheat Atta -100% Pure  </string>
    <string name="product_item_weight"> 0kg </string>
    <string name="product_deiscount_price_text"> </string>
    <string name="product_item_offer_price">  250 </string>
    <string name="product_item_saved_price">  250 </string>
    <string name="product_item_add">  ADD </string>
    <string name="product_item_plus_icon">  + </string>
    <string name="product_item_wieght"> 10kg </string>
    <string name="product_original_price_text">  </string>
    <string name="Rs">\u20B9 </string>
    <string name="RsSybol">\u20B9</string>
    <string name="google_place_api_key">AIzaSyCvCpeA2b-sGhnlYbbB67GhNohHIRaXRSs</string>
    <string name="product_select"> Select </string>
    <string name="product_deducted"> Deducted </string>
    <string name="product_total"> Total </string>
    <string name="product_add_wish_list">Add to wishlist</string>
    <string name="product_remove_wish_list">Remove to wishlist</string>
    <string name="product_discription">Made from the choicest grains, Aashirvaad Whole Wheat Atta is 100% sampoorna atta with zero maida, grounded carefully using gfgrtgdfgfgefdhgfgbfsdvdgfgbfgvfdfergnhgm,grgfghyj,hfgfjnukjhgdfggjmjnfdbfgnh"
              </string>
    <string name="product_read_all"> Read All </string>
    <string name="product_similar_product"> Similar Products </string>
    <string name="last_minute_buys"> Last Minute Buys </string>
    <string name="explore"> Explore </string>
    <string name="you_may_also_like"> you may also like </string>
    <string name="go_to_cart"> GO to Cart </string>
    <string name="delievery_location_selection">Please choose your delivery location.</string>
    <string name="delievery_location">Delivery Location</string>
    <string name="use_my_location">Use My Location </string>
    <string name="set_location_manually">Set Location Manually</string>
    <string name="invite_friend">Invite a Friend</string>
    <string name="friend_signup">Friend Signup </string>
    <string name="get_cashback">Get Cashback</string>
    <string name="your_referral_code">Your Referral Code</string>
    <string name="your_referral_link">Your Referral Link</string>
    <string name="referral_link"> <u>Get Referral Link</u></string>
    <string name="referral_code"> <u>Get Referral code</u></string>
    <string name="share_via"> Share Via</string>
    <string name="total_mrp"> Total MRP</string>
    <string name="your_total_saving"> Your Total Savings </string>
    <string name="price"> \u20B9 0</string>
    <string name="saved_price"> \u20B9 0 (25%)</string>
    <string name="total_pay"> Total to Pay</string>
    <string name="promecode_offers"> Promo Code &amp; Offers</string>
    <string name="choose_payment_method"> Choose Payment Method</string>
    <string name="wallet"> Wallet</string>
    <string name="debit_card"> Debit/ Credit Card</string>
    <string name="net_banking"> Net Banking </string>
    <string name="cash_on_delivery"> Cash On Delivery </string>
    <string name="payment"> Payment</string>
    <string name="product_details">  Product Details (%1$d Items)</string>
    <string name="save_more">Save ₹%1$d more</string>
    <string name="city"> city </string>
    <string name="locality"> locality </string>
    <string name="address"> Address </string>
    <string name="Name"> Name </string>
    <string name="delivery_address"> Delivery Address </string>
    <string name="check_out"> checkout </string>
    <string name="dateof_birth"> Date Of Birth </string>
    <string name="save"> Save </string>
    <string name="you_save">You Save </string>
    <string name="welcome_messages">Hello, %1$s! You have %2$d new messages.</string>
    <string name="err_social_login">Something went wrong with social sign in!</string>
    <string name="recomded_prod">Recommended Products</string>
    <string name="Mon">Mon</string>
    <string name="Tue">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thu">Thu</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>
    <string name="Sun">Sun</string>
</resources>