<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_footer_home"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_category"
        android:enabled="true"
        android:icon="@drawable/ic_footer_category"
        android:title="@string/category"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_offers"
        android:enabled="true"
        android:icon="@drawable/ic_footer_offer"
        android:title="@string/offers"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_wishlist"
        android:enabled="true"
        android:icon="@drawable/ic_footer_wishlist"
        android:title="@string/wishlist"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_account"
        android:enabled="true"
        android:icon="@drawable/ic_footer_account"
        android:title="@string/account"
        app:showAsAction="always" />
</menu>
